# sivpYH

./: .gitattributes  .gitignore  README.md  pyproject.toml
docs/: reference_verification.md
results/: framewise_fusion_metric_baselines_independent.json  fusion_temporal_quality_baseline_table.csv  fusion_temporal_quality_baseline_table.md  fusion_temporal_quality_frozen_protocol.md  fusion_temporal_quality_independent.json  fusion_temporal_quality_m3svd_full_test.json  fusion_temporal_quality_split_robustness.json  manuscript_additional_verified_metrics.json  paper_reported_results.json  real_fusion_model_confirmed_metrics.json  real_fusion_temcoco_gif_multi_pilot.json  real_fusion_temcoco_gif_pilot.json  temcoco_resnet_feacd_independent.json  temcoco_searaft_flowd_independent.json  temcoco_searaft_flowd_m3svd_full_test.json
results/paper_figures_grayscale/: figure_manifest.md  figure_qa.json
scripts/: analyze_fusion_temporal_quality_split_robustness.py  build_paper_reported_results.py  compile_fusion_temporal_quality_baseline_table.py  download_vidllvip_subset.py  run_framewise_fusion_metric_baselines_independent.py  run_fusion_temporal_quality_external.py  run_fusion_temporal_quality_independent.py  run_fusion_temporal_quality_m3svd_full_test.py  run_real_fusion_temcoco_gif_multi_pilot.py  run_real_fusion_temcoco_gif_pilot.py  run_temcoco_resnet_feacd_independent.py  run_temcoco_searaft_flowd_independent.py  run_temcoco_searaft_flowd_m3svd_full_test.py
scripts/figures/: generate_sivp_figures.py
tests/: test_fusion_temporal_quality.py  test_temporal_sync.py
(+4 files in other folders)
