[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sivp-source-referenced-temporal-quality"
version = "0.2.0"
description = "Source-referenced temporal artifact assessment for infrared-visible fusion video"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "opencv-python>=4.8",
  "scipy>=1.11",
  "scikit-learn>=1.3",
  "matplotlib>=3.8",
  "pillow>=10",
  "pyyaml>=6",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
baselines = ["torch>=2.2", "torchvision>=0.17"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
